--- a/src/App.css
+++ b/src/App.css
@@ -206,6 +206,7 @@ ul p:nth-child(5) .nav-links::before {
    background-color: rgba(255, 255, 255, 0.45);
    opacity: 1;
    transition: opacity 150ms ease-in-out;
+   border-radius: 10px;
 }
 
 .active-img::before:hover {
